--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @theme {
   --font-family-sans: "Nunito Sans", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --color-body-bg: #F5F5F5;
 
   --breakpoint-xs: 475px;
   --breakpoint-sm: 640px;
